# torch-strumpack

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml  win-debug.yml
docker/: Dockerfile.rocm
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
scripts/: build_strumpack.ps1  build_strumpack.sh  build_wheel.ps1  ci_build_wheel.sh  tag_wheel.py
src/: strumpack_ext.cpp
tests/: test_solve.py
torch_strumpack/: __init__.py  _core.py  autograd.py
