[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-strumpack"
version = "0.0.1.dev0"
description = "Differentiable sparse direct solver for PyTorch (CPU / CUDA / ROCm), STRUMPACK-backed"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "walkerchi" }]
dependencies = [
    "torch>=2.1",
    "numpy",
]

[project.optional-dependencies]
# scipy is used ONLY as a correctness oracle in the test-suite, never as a solver.
dev = ["pytest", "scipy"]

[tool.setuptools.packages.find]
include = ["torch_strumpack*"]

[tool.setuptools.package-data]
torch_strumpack = ["*.so"]
